www/css/phone/iphone5.css
.modalWindow{
  width: 100%;
  height: 454px;
  position: absolute;
  z-index: 20;
  background: white;
  opacity: 0.7;
}

.ui-loader{
    z-index: 1501;
}

#map { 
  position:absolute; 
  top: 70px;
  bottom:0px; 
  width:100%;
}

#home-swiper-header .swiper-container {
  height: 70px;
  width: 640px;
}

#home-swiper-header .header-swiper-title {
  text-align: left;
  padding-top: 16px;
  padding-left: 20px;
  font-size: 15px;
  margin-bottom: 10px;
}

#home-swiper-header .pagination {
  position: absolute;
  left: 0;
  text-align: center;
  bottom:5px;
  width: 100%;
}
#home-swiper-header .swiper-pagination-switch {
  display: inline-block;
  width: 10px;
  height: 10px;
  border-radius: 10px;
  background: #999;
  box-shadow: 0px 1px 2px #555 inset;
  margin: 0 3px;
  cursor: pointer;
}

#home-swiper-header .swiper-active-switch {
  background: #fff;
}

#home-swiper-header .bulletin {
  background: #fff;
}

#selectMapPanel {
  background-image: -webkit-gradient(linear, left top, left bottom, from( #292D30 ), to( #292D30 )); /* Saf4+, Chrome */
  background-image: -webkit-linear-gradient( #292D30, #292D30 ); /* Chrome 10+, Saf5.1+ */
  background-image:    -moz-linear-gradient( #292D30, #292D30 ); /* FF3.6 */
  background-image:     -ms-linear-gradient( #292D30, #292D30 ); /* IE10 */
  background-image:      -o-linear-gradient( #292D30, #292D30 ); /* Opera 11.10+ */
  background-image:         linear-gradient( #292D30, #292D30 );  
}

#people {
  top:70px; 
  bottom: 0px; 
  margin: 0px; 
  padding: 0px;
  background-image: -webkit-gradient(linear, left top, left bottom, from( #0380B5 ), to( #FFFFFF )); /* Saf4+, Chrome */
  background-image: -webkit-linear-gradient( #0380B5, #FFFFFF ); /* Chrome 10+, Saf5.1+ */
  background-image:    -moz-linear-gradient( #0380B5, #FFFFFF ); /* FF3.6 */
  background-image:     -ms-linear-gradient( #0380B5, #FFFFFF ); /* IE10 */
  background-image:      -o-linear-gradient( #0380B5, #FFFFFF ); /* Opera 11.10+ */
  background-image:         linear-gradient( #0380B5, #FFFFFF );  
  background-size: 100%;
  height: 456px;
}

/* notifications */
#notifications .unread {
  width: 100%;
  height: 100%;
  background-image: -webkit-gradient(linear, left top, left bottom, from( #FFAB7A ), to( #FFAB7A )); /* Saf4+, Chrome */
  background-image: -webkit-linear-gradient( #FFAB7A, #FFAB7A ); /* Chrome 10+, Saf5.1+ */
  background-image:    -moz-linear-gradient( #FFAB7A, #FFAB7A ); /* FF3.6 */
  background-image:     -ms-linear-gradient( #FFAB7A, #FFAB7A ); /* IE10 */
  background-image:      -o-linear-gradient( #FFAB7A, #FFAB7A ); /* Opera 11.10+ */
  background-image:         linear-gradient( #FFAB7A, #FFAB7A );    
}

#notifications .header{
  height: 70px;
  width: 100%;
  margin-bottom: 10px;
}

#notifications .header .title{
  padding-top:30px;
  text-align: left;
  padding-left: 30px;
  font-size: 25px;
}

#notifications .header a.ui-btn{
  border: none !important;
  top:25px;
  left:30px; 
}

#notifications .notifications.ui-content{
  /* .ui-content makes a padding 1em in the view, fix it by marking !important */
  padding: 0px!important;
  top: 70px;
  height: 456px!important;
  margin: 0px!important;
  bottom: 0px;
} 

#notifications .messages .refresh {
  position: absolute;
  left: 0;
  top: 0px;
  z-index: 0;
  color: #000000;
  text-align: center;
  line-height: 60px;
  width: 100%;
  opacity: 1;
  font-size: 15px;
  -webkit-transition: 300ms;
  -moz-transition: 300ms;
  -ms-transition: 300ms;
  -o-transition: 300ms;
  transition: 300ms;
  display: none;
}

#notifications .messages.swiper-container {
  width: 100%;
  height: 100%;
  color: #fff;
  position: relative;
}

#notifications .messages .list {
  padding:0 !important;
  margin: 0 !important;
  width: 100% !important;
}

#notifications .messages .swiper-slide {
  height: 60px;
  width: 100%;
  /*line-height: 100px;*/
  opacity: 0.2;
  -webkit-transition: 300ms;
  -moz-transition: 300ms;
  -ms-transition: 300ms;
  -o-transition: 300ms;
  transition: 300ms;
}

#notifications .messages .swiper-slide-visible {
  opacity: 1;
}

#notifications .messages .swiper-wrapper li{
    border-style:solid;
    border-color:#75F23D;
}
#notifications .messages .swiper-wrapper li:first-of-type{
    border-style:solid ;
    border-color:#75F23D;
}

#notifications .messages .swiper-wrapper li:last-of-type{
    border-bottom-style:solid ;
    border-bottom-color:#75F23D;
}

#notifications .messages .swiper-wrapper li h2{
    display: inline-block;
    list-style-type: none;
    padding-left: 20px;
    vertical-align: top;
    line-height: 18px;
}

#notifications .messages .swiper-slide img {
  height: 48px;
  width: 48px;
  padding: 0px;
}

/* notification */
#notification .header{
  height: 70px;
  width: 100%;
  margin-bottom: 10px;
}

#notification .header .title a.ui-btn{
  left: 30px;
  top : 20px;
  font-size: 15px;
  text-align: left;
  text-shadow: none;
  border: none !important;
}

#notification .content.ui-content{
  /* .ui-content makes a padding 1em in the view, fix it by marking !important */
  top: 70px;
  padding: 0px!important;
  margin: 0px!important;
} 

#notification iframe {
  width: 100%!important;
  height: 100%!important;
}

/*  user profile, status, settings */
#user-index .header{
  height: 70px;
  width: 100%;
  margin-bottom: 10px;
}

#user-index .header .title{
  padding-top:30px;
  text-align: left;
  padding-left: 30px;
  font-size: 25px;
}

#user-index .content.ui-content {
  height: 456px;
  padding: 0px!important;
  margin: 0px!important;
}

#user-index .content.ui-content .avatar{
  background-image: url("../../img/user-profile-blur.png");
  background-repeat: no-repeat;
  background-size: 100%;
  width: 100%!important;
  height: 200px!important;
  top: 70px;
}

#user-index .content.ui-content .avatar img{ 
  width: 90px;
  height: 90px;
  padding-top: 55px;
  padding-left: 115px;
}

#user-index .content.ui-content .avatar i{ 
    padding-left: 280px;
    color:black;
}

/*http://www.w3schools.com/cssref/playit.asp?filename=playcss_border-style&preval=dashed*/
#user-index .content.ui-content ul li{
    border-style: dashed;
    line-height: 48px;
    width: 100%;
}

#user-index .content.ui-content li i{
  padding-left: 12px;
}

#user-index .content.ui-content li span{
  padding-left: 20px;
  font:small-caps bold 17px Times New Roman; 
  text-align:left;  
  color:purple;  
}

#user-index .content.ui-content li .fa.fa-edit{
  width: 40px;
  position: absolute;
  right: 40px;
  vertical-align: middle;
  line-height: 48px;
}

#profile-editor .header{
  height: 70px;
  width: 100%;
  margin-bottom: 10px;
}

#profile-editor .header .title{
  padding-top:30px;
  text-align: left;
  padding-left: 30px;
  font-size: 15px;
}

#profile-editor .content.ui-content {
  padding: 0px!important;
  top: 70px;
  margin: 0px!important;
}

#profile-editor .content.ui-content .panel {
  padding:10px 20px 0px 20px; 
}

#profile-editor .ui-input-group label{
    font-size: 16px;
    display: inline-block;
    box-sizing: border-box;
    width: 30px;
    padding-left: 10px;
    text-align: center;
}

#profile-editor .ui-input-group input
{
    display: inline-block;
    box-sizing: border-box;
    width: 100%;
    margin-right: 0;
    margin-left: -36px;
    padding-left: 36px;
}

#settings-index .header{
  height: 70px;
  width: 100%;
  margin-bottom: 10px;
}

#settings-index .header .title{
  padding-top:30px;
  text-align: left;
  padding-left: 30px;
  font-size: 25px;
}

#settings-index .content.ui-content{
  height: 456px!important;
  width: 100%!important;
}

#settings-index .ui-slider{
  left: 150px;
  width: 60px;
  top: -12px;
}

#settings-index .packed{
  height: 20px;
}

#settings-index li span{
    font-size: 1em;
    vertical-align: top;
    width: 40%;
}

#settings-index .appVersion{
  padding-left: 40px;
}

#settings-index .resetPwdBtn {
  background: -webkit-linear-gradient(#FFF, #FFF) repeat scroll 0 0 #FFFFFF !important;
}

#reset-pwd .header{
  height: 70px;
  width: 100%;
  margin-bottom: 10px;
}

#reset-pwd .header .title{
  padding-top:30px;
  text-align: left;
  padding-left: 30px;
  font-size: 25px;
}

#reset-pwd .content.ui-content{
  top: 70px;
  height: 456px!important;
  width: 100%!important;
  background-color: #FFFFFF;
}

#reset-pwd-verify .header{
  height: 70px;
  width: 100%;
  margin-bottom: 10px;
}

#reset-pwd-verify .header .title{
  padding-top:30px;
  text-align: left;
  padding-left: 30px;
  font-size: 25px;
}

#reset-pwd-verify .content.ui-content{
  top: 70px;
  height: 456px!important;
  width: 100%!important;
  background-color: #FFFFFF;
}

#about-app .header{
  height: 70px;
  width: 100%;
  margin-bottom: 10px;
}

#about-app .header .title{
  padding-top:30px;
  text-align: left;
  padding-left: 30px;
  font-size: 25px;
}

#about-app .content.ui-content{
  top: 70px;
  height: 456px!important;
  width: 100%!important;
  background-color: #FFFFFF;
}

#agreements .header{
  height: 70px;
  width: 100%;
  margin-bottom: 10px;
}

#agreements .header .title{
  padding-top:30px;
  text-align: left;
  padding-left: 30px;
  font-size: 25px;
}

#saveProfileBtn {
  border: none !important; 
  padding-top:40px; 
  width:50px; 
  height:25px; 
  left:220px
}

#cancelEditProfileBtn {
  border: none !important; 
  padding-top:40px; 
  width:50px; 
  height:25px; 
  left:270px
}

/* http://stackoverflow.com/questions/12200444/remove-hover-click-states-of-buttons */
.musa-nostate-btn {
  background: -webkit-linear-gradient(#292D30, #292D30) repeat scroll 0 0 #FFFFFF !important;
}

#headerBtn1 {
  border: none !important; 
  top:30px; 
  width:50px; 
  height:25px; 
  left:270px
}

#headerBtn2 {
  border: none !important; 
  top:30px; 
  width:50px; 
  height:25px; 
  left:220px;
}

#signOutBtn {
  border: none !important; 
  padding-top:40px; 
  width:50px; 
  height:25px; 
  left:270px
}

